--- a/index.html
+++ b/index.html
@@ -1,42 +1,221 @@
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CoctailDB</title>
+    <title>CocktailDB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body id="container">
-    <header id="postHeader">
+    <header id="posiHeader">
         <section class="section_gauche">
             <h1>Welcome to Cocktail Bored</h1>
             <h6>Try the Cocktailshaker for the random cocktail</h6>
         </section>
 
         <section class="section_droite">
-            <button>Shake for a cocktail</button>
+            <button  type="submit" id="bouton">Shake for a cocktail</button>
             <h2>Thai Coffee</h2>
         </section>
     </header>
-    <main>
-        <form action="">
-            <input type="radio">
-            <input type="radio">
-            <input type="search">
-
-
+    <main id="posiMain">
+        <form  id="formPrincipal" action="" method="get">
+            <section>
+                <input type="radio" id="cocktailName" name="choix">ingredients
+                <input type="radio" id="ingredients" name="choix">Cocktail Name
+            </section>
+            <section>
+                <input type="search" id="searchArea">
+                <button  type="submit" id="btnSearch">search</button>
+            </section>
         </form>
     </main>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="script/script.js"></script>
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-<script src="script/script.js"></script>
-</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Choisir un Cocktail</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .radio-group {
+            margin: 10px 0;
+        }
+        .cocktail-list {
+            list-style-type: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .cocktail-list li {
+            padding: 15px;
+            background-color: #fff;
+            margin: 10px;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            text-align: center;
+            width: 200px;
+        }
+        .cocktail-list img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
+        }
+        .cocktail-list li:hover {
+            background-color: #e2e2e2;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Choisissez un Cocktail</h1>
+        
+        <!-- Choix des cocktails par ingrédient -->
+        <div class="radio-group">
+            <h3>Filtrer par Ingrédient</h3>
+            <label>
+                <input type="radio" name="ingredient" value="Tequila"> Tequila
+            </label>
+            <label>
+                <input type="radio" name="ingredient" value="Rum"> Rum
+            </label>
+            <label>
+                <input type="radio" name="ingredient" value="Vodka"> Vodka
+            </label>
+            <label>
+                <input type="radio" name="ingredient" value="Gin"> Gin
+            </label>
+            <label>
+                <input type="radio" name="ingredient" value="Lime juice"> Lime Juice
+            </label>
+        </div>
 
+        <!-- Choix des cocktails par nom -->
+        <div class="radio-group">
+            <h3>Filtrer par Nom</h3>
+            <label>
+                <input type="radio" name="cocktail" value="Margarita"> Margarita
+            </label>
+            <label>
+                <input type="radio" name="cocktail" value="Martini"> Martini
+            </label>
+            <label>
+                <input type="radio" name="cocktail" value="Mojito"> Mojito
+            </label>
+            <label>
+                <input type="radio" name="cocktail" value="Cosmopolitan"> Cosmopolitan
+            </label>
+            <label>
+                <input type="radio" name="cocktail" value="Old Fashioned"> Old Fashioned
+            </label>
+        </div>
+
+        <!-- Affichage des cocktails -->
+        <ul id="cocktail-list" class="cocktail-list"></ul>
+    </div>
+
+    <script>
+        // Fonction pour afficher les cocktails avec leurs informations et images
+        function displayCocktails(cocktails) {
+            const cocktailList = document.getElementById('cocktail-list');
+            cocktailList.innerHTML = ''; // Réinitialiser la liste avant d'afficher
+
+            if (cocktails && cocktails.length > 0) {
+                cocktails.forEach(cocktail => {
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `
+                        <img src="${cocktail.strDrinkThumb}" alt="${cocktail.strDrink}">
+                        <strong>${cocktail.strDrink}</strong><br>
+                        <p>${cocktail.strInstructions}</p>
+                    `;
+                    cocktailList.appendChild(listItem);
+                });
+            } else {
+                cocktailList.innerHTML = '<li>Aucun cocktail trouvé.</li>';
+            }
+        }
+
+        // Fonction pour récupérer les cocktails par ingrédient via l'API
+        async function fetchCocktailsByIngredient(ingredient) {
+            const url = `https://www.thecocktaildb.com/api/json/v1/1/filter.php?i=${ingredient}`;
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+                if (data.drinks) {
+                    displayCocktails(data.drinks);
+                } else {
+                    displayCocktails([]);
+                }
+            } catch (error) {
+                console.error('Erreur lors de la récupération des cocktails:', error);
+            }
+        }
+
+        // Fonction pour récupérer les cocktails par nom via l'API
+        async function fetchCocktailsByName(cocktailName) {
+            const url = `https://www.thecocktaildb.com/api/json/v1/1/search.php?s=${cocktailName}`;
+            try {
+                const response = await fetch(url);
+                const data = await response.json();
+                if (data.drinks) {
+                    displayCocktails(data.drinks);
+                } else {
+                    displayCocktails([]);
+                }
+            } catch (error) {
+                console.error('Erreur lors de la récupération des cocktails:', error);
+            }
+        }
+
+        // Ajouter des événements aux boutons radio pour filtrer par ingrédient ou nom
+        document.querySelectorAll('input[name="ingredient"]').forEach(radio => {
+            radio.addEventListener('change', () => {
+                const selectedIngredient = document.querySelector('input[name="ingredient"]:checked')?.value;
+                if (selectedIngredient) {
+                    fetchCocktailsByIngredient(selectedIngredient);
+                }
+            });
+        });
+
+        document.querySelectorAll('input[name="cocktail"]').forEach(radio => {
+            radio.addEventListener('change', () => {
+                const selectedCocktailName = document.querySelector('input[name="cocktail"]:checked')?.value;
+                if (selectedCocktailName) {
+                    fetchCocktailsByName(selectedCocktailName);
+                }
+            });
+        });
+
+        // Charger la liste des cocktails par défaut
+        fetchCocktailsByName('Margarita'); // Recherche initiale par "Margarita"
+    </script>
+</body>
 </html>
